--- a/text_based_slider/style.css
+++ b/text_based_slider/style.css
@@ -32,13 +32,13 @@ body {
 }
 
 /**/
-.sf-card {
+.card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 48%;
 }
 
-.sf-card:hover {
+.card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -49,17 +49,17 @@ body {
 }
 
 /*counter*/
-.sf-carousel-cell:before {
+.carousel-cell:before {
   content: unset;
 }
 
-.sf-carousel-cell .container h4 {
+.carousel-cell .container h4 {
   margin: 0px 0px 0px -5px;
   line-height: 18px;
   min-width: 150px;
 }
 
-.sf-carousel-cell .container h4 b {
+.carousel-cell .container h4 b {
   font-size: 0.75em !important;
   line-height: 0em !important;
   /* margin-right: 0px; */
@@ -69,13 +69,13 @@ body {
   width: 125%;
 }
 
-.sf-carousel-cell .container p {
+.carousel-cell .container p {
   margin: 4px 0px 8px -4px;
   font-size: 12px;
   min-width: 99px;
 }
 
-.sf-carousel-cell {
+.carousel-cell {
   background: #fff !important;
   height: 320px;
   width: 168px;
@@ -86,11 +86,11 @@ body {
   height: 330px !important;
 }
 
-.sf-carousel-cell {
+.carousel-cell {
   height: 320px;
   margin-right: 0px;
 }
-.sf-carousel {
+.carousel {
   background: unset;
 }
 
@@ -98,7 +98,7 @@ ol.flickity-page-dots {
   display: none;
 }
 
-.sf-button {
+.button {
   background-color: #000;
   border: none;
   color: white;
@@ -117,7 +117,7 @@ ol.flickity-page-dots {
 
 
 
-.sf-carousel-cell img{
+.carousel-cell img{
   width: 100%; 
   height: 60%; 
   object-fit: cover;
