--- a/text_based_slider/style.css
+++ b/text_based_slider/style.css
@@ -13,27 +13,30 @@ body {
 }
 
 .carousel-cell {
-  width: 66%;
-  height: 200px;
-  margin-right: 10px;
-  background: #8c8;
   border-radius: 5px;
   counter-increment: gallery-cell;
+  background: #fff !important;
+  height: 320px;
+  width: 168px;
+  margin-right: 0px;
 }
 
 /* cell number */
 .carousel-cell:before {
-  display: block;
-  text-align: center;
-  content: counter(gallery-cell);
-  line-height: 200px;
-  font-size: 80px;
-  color: white;
+   display: block;
+    text-align: center;
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+    content: unset;
 }
 
 /**/
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  display: inline-grid;
+  margin: 10px 15px 10px 15px !important;
+  padding: 0px 7px;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
   transition: 0.3s;
   width: 48%;
 }
@@ -125,32 +128,8 @@ ol.flickity-page-dots {
 
 
 
-.carousel-cell {
-    height: 320px;
-    margin-right: 0px;
-    background: #fff !important;
-    height: 320px;
-    width: 168px;
-    margin-right: 0px;
-}
+/****/
 
-
-.carousel-cell:before {
-    display: block;
-    text-align: center;
-    content: counter(gallery-cell);
-    line-height: 200px;
-    font-size: 80px;
-    color: white;
-    content: unset;
-}
-
-
-.carousel-cell img {
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
-}
 
 
 
@@ -185,16 +164,6 @@ ol.flickity-page-dots {
 }
 
 
-.card{
-  display: inline-grid;
-  margin: 10px 15px 10px 15px !important;
-  padding: 0px 7px;
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-  transition: 0.3s;
-  width: 48%;
-}
-
-
 .card:after {
     content: "Click to add image";
     position: relative;
@@ -219,6 +188,7 @@ ol.flickity-page-dots {
     position: relative;
     right: -4px;
 }
+
 
 button.BtnHandle {
   cursor: pointer;
