--- a/text_based_slider/style.css
+++ b/text_based_slider/style.css
@@ -1,18 +1,8 @@
-/* external css: flickity.css */
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-}
-
-.carousel {
+.sf-carousel {
   background: #eee;
 }
 
-.carousel-cell {
+.sf-carousel-cell {
   border-radius: 5px;
   counter-increment: gallery-cell;
   background: #fff !important;
@@ -22,7 +12,7 @@ body {
 }
 
 /* cell number */
-.carousel-cell:before {
+.sf-carousel-cell:before {
    display: block;
     text-align: center;
     line-height: 200px;
@@ -32,7 +22,7 @@ body {
 }
 
 /**/
-.card {
+.sf-carousel-card {
   display: inline-grid;
   margin: 10px 15px 10px 15px !important;
   padding: 0px 7px;
@@ -41,28 +31,28 @@ body {
   width: 48%;
 }
 
-.card:hover {
+.sf-carousel-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.container {
+.sf-container {
   padding: 2px 16px;
   overflow: hidden;
   max-height: 91px;
 }
 
 /*counter*/
-.carousel-cell:before {
+.sf-carousel-cell:before {
   content: unset;
 }
 
-.carousel-cell .container h4 {
+.sf-carousel-cell .sf-container h4 {
   margin: 0px 0px 0px -5px;
   line-height: 18px;
   min-width: 150px;
 }
 
-.carousel-cell .container h4 b {
+.sf-carousel-cell .sf-container h4 b {
   font-size: 0.75em !important;
   line-height: 0em !important;
   /* margin-right: 0px; */
@@ -72,13 +62,13 @@ body {
   width: 125%;
 }
 
-.carousel-cell .container p {
+.sf-carousel-cell .sf-container p {
   margin: 4px 0px 8px -4px;
   font-size: 12px;
   min-width: 99px;
 }
 
-.carousel-cell {
+.sf-carousel-cell {
   background: #fff !important;
   height: 320px;
   width: 168px;
@@ -89,11 +79,11 @@ body {
   height: 330px !important;
 }
 
-.carousel-cell {
+.sf-carousel-cell {
   height: 320px;
   margin-right: 0px;
 }
-.carousel {
+.sf-carousel {
   background: unset;
 }
 
@@ -101,7 +91,7 @@ ol.flickity-page-dots {
   display: none;
 }
 
-.button {
+.sf-carousel-button {
   background-color: #000;
   border: none;
   color: white;
@@ -120,7 +110,7 @@ ol.flickity-page-dots {
 
 
 
-.carousel-cell img{
+.sf-carousel-cell img{
   width: 100%; 
   height: 60%; 
   object-fit: cover;
@@ -133,7 +123,7 @@ ol.flickity-page-dots {
 
 
 
-.addTxt{
+.sf-carousel-addTxt{
     position: relative;
     height: 69px;
     max-width: 100%;
@@ -143,7 +133,7 @@ ol.flickity-page-dots {
     resize: none;
 }
 
-.fomBtn{
+.sf-carousel-fomBtn{
     position: relative;
     height: 21px;
     max-width: 85%;
@@ -157,14 +147,14 @@ ol.flickity-page-dots {
 
 
 
-.addTitle{
+.sf-carousel-addTitle{
     position: relative;
     bottom: 189px;
     width: 100%;
 }
 
 
-.card:after {
+.sf-card:after {
     content: "Click to add image";
     position: relative;
     z-index: 0;
@@ -175,7 +165,7 @@ ol.flickity-page-dots {
 }
 
 
-.txtColorBtn {
+.sf-carousel-txtColorBtn {
  background-color: #4CAF50;
     border: none;
     color: white;
@@ -190,7 +180,7 @@ ol.flickity-page-dots {
 }
 
 
-button.BtnHandle {
+button.sf-carousel-BtnHandle {
   cursor: pointer;
   z-index: 4;
   opacity: 0.5;
@@ -203,7 +193,7 @@ button.BtnHandle {
 
 
 
-.BtnDelete{
+.sf-carousel-BtnDelete{
     background-color: transparent;
     border: none;
     color: #585858;
@@ -218,14 +208,14 @@ button.BtnHandle {
     cursor: pointer;
 }
 
-.BtnHandle{
+.sf-carousel-BtnHandle{
   top: 10px;
     z-index: 1;
     position: relative;
     left: 1px;
 }
 
-.imgUpload {
+.sf-carousel-imgUpload {
     top: -10px;
     background-position: center;
     background-size: cover;
@@ -236,17 +226,16 @@ button.BtnHandle {
     z-index: 3;
 }
 
-.imgUpload, .cardContent {
+.sf-carousel-imgUpload, .sf-carousel-cardContent {
     width: 100%;
     height: 180px !important;
     position: relative;
 }
 
-.cardContent  {
+.sf-carousel-cardContent  {
     top: -193px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 2;
-  
 }
