--- a/text_based_slider/style.css
+++ b/text_based_slider/style.css
@@ -1,8 +1,8 @@
-.sf-carousel {
+.carousel {
   background: #eee;
 }
 
-.sf-carousel-cell {
+.carousel-cell {
   border-radius: 5px;
   counter-increment: gallery-cell;
   background: #fff !important;
@@ -12,7 +12,7 @@
 }
 
 /* cell number */
-.sf-carousel-cell:before {
+.carousel-cell:before {
    display: block;
     text-align: center;
     line-height: 200px;
@@ -22,7 +22,7 @@
 }
 
 /**/
-.sf-carousel-card {
+.card {
   display: inline-grid;
   margin: 10px 15px 10px 15px !important;
   padding: 0px 7px;
@@ -31,28 +31,28 @@
   width: 48%;
 }
 
-.sf-carousel-card:hover {
+.card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.sf-container {
+.container {
   padding: 2px 16px;
   overflow: hidden;
   max-height: 91px;
 }
 
 /*counter*/
-.sf-carousel-cell:before {
+.carousel-cell:before {
   content: unset;
 }
 
-.sf-carousel-cell .sf-container h4 {
+.carousel-cell .container h4 {
   margin: 0px 0px 0px -5px;
   line-height: 18px;
   min-width: 150px;
 }
 
-.sf-carousel-cell .sf-container h4 b {
+.carousel-cell .container h4 b {
   font-size: 0.75em !important;
   line-height: 0em !important;
   /* margin-right: 0px; */
@@ -62,13 +62,13 @@
   width: 125%;
 }
 
-.sf-carousel-cell .sf-container p {
+.carousel-cell .container p {
   margin: 4px 0px 8px -4px;
   font-size: 12px;
   min-width: 99px;
 }
 
-.sf-carousel-cell {
+.carousel-cell {
   background: #fff !important;
   height: 320px;
   width: 168px;
@@ -79,11 +79,11 @@
   height: 330px !important;
 }
 
-.sf-carousel-cell {
+.carousel-cell {
   height: 320px;
   margin-right: 0px;
 }
-.sf-carousel {
+.carousel {
   background: unset;
 }
 
@@ -91,7 +91,7 @@ ol.flickity-page-dots {
   display: none;
 }
 
-.sf-carousel-button {
+.button {
   background-color: #000;
   border: none;
   color: white;
@@ -110,7 +110,7 @@ ol.flickity-page-dots {
 
 
 
-.sf-carousel-cell img{
+.carousel-cell img{
   width: 100%; 
   height: 60%; 
   object-fit: cover;
@@ -123,7 +123,7 @@ ol.flickity-page-dots {
 
 
 
-.sf-carousel-addTxt{
+.addTxt{
     position: relative;
     height: 69px;
     max-width: 100%;
@@ -133,7 +133,7 @@ ol.flickity-page-dots {
     resize: none;
 }
 
-.sf-carousel-fomBtn{
+.fomBtn{
     position: relative;
     height: 21px;
     max-width: 85%;
@@ -147,14 +147,14 @@ ol.flickity-page-dots {
 
 
 
-.sf-carousel-addTitle{
+.addTitle{
     position: relative;
     bottom: 189px;
     width: 100%;
 }
 
 
-.sf-card:after {
+.card:after {
     content: "Click to add image";
     position: relative;
     z-index: 0;
@@ -165,7 +165,7 @@ ol.flickity-page-dots {
 }
 
 
-.sf-carousel-txtColorBtn {
+.txtColorBtn {
  background-color: #4CAF50;
     border: none;
     color: white;
@@ -180,7 +180,7 @@ ol.flickity-page-dots {
 }
 
 
-button.sf-carousel-BtnHandle {
+button.BtnHandle {
   cursor: pointer;
   z-index: 4;
   opacity: 0.5;
@@ -193,7 +193,7 @@ button.sf-carousel-BtnHandle {
 
 
 
-.sf-carousel-BtnDelete{
+.BtnDelete{
     background-color: transparent;
     border: none;
     color: #585858;
@@ -208,14 +208,14 @@ button.sf-carousel-BtnHandle {
     cursor: pointer;
 }
 
-.sf-carousel-BtnHandle{
+.BtnHandle{
   top: 10px;
     z-index: 1;
     position: relative;
     left: 1px;
 }
 
-.sf-carousel-imgUpload {
+.imgUpload {
     top: -10px;
     background-position: center;
     background-size: cover;
@@ -226,16 +226,17 @@ button.sf-carousel-BtnHandle {
     z-index: 3;
 }
 
-.sf-carousel-imgUpload, .sf-carousel-cardContent {
+.imgUpload, .cardContent {
     width: 100%;
     height: 180px !important;
     position: relative;
 }
 
-.sf-carousel-cardContent  {
+.cardContent  {
     top: -193px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 2;
+  
 }
