--- a/text_based_slider/style.css
+++ b/text_based_slider/style.css
@@ -35,7 +35,7 @@ body {
 .sf-carousel-card {
   /*display: inline-grid;*/
   margin: 10px 15px 10px 15px !important;
-  padding: 0px 7px;
+  padding: 8px 7px;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
   transition: 0.3s;
   width: 48%;
@@ -124,6 +124,7 @@ ol.flickity-page-dots {
   width: 100%; 
   height: 60%; 
   object-fit: cover;
+  border-radius: 3px;
 }
 
 
