--- a/text_based_slider/style.css
+++ b/text_based_slider/style.css
@@ -103,19 +103,18 @@ ol.flickity-page-dots {
 
 .sf-carousel-button {
   background-color: #000;
-    border: none;
-    color: white;
-    padding: 3px 3px 3px 3px;
-    border-radius: 4px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 11px;
-    margin: 4px -14px;
-    cursor: pointer;
-    min-width: 36%;
-    position: fixed;
-    bottom: 18px;
+  border: none;
+  color: white;
+  padding: 3px 3px 3px 3px;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 11px;
+  margin: 4px auto;
+  cursor: pointer;
+  width: 154px;
+  position: fixed;
+  bottom: 18px;
 }
 
 
