--- a/text_based_slider/style.css
+++ b/text_based_slider/style.css
@@ -66,6 +66,7 @@ body {
   font-size: 0.75em !important;
   line-height: 2em !important;
   /* margin-right: 0px; */
+  word-wrap: break-word;
 }
 
 .flickity-slider {
@@ -76,6 +77,7 @@ body {
   margin: 4px 0px 8px -4px;
   font-size: 12px;
   min-width: 99px;
+  word-wrap: break-word;
 }
 
 .sf-carousel-cell {
